--- a/src/resources/styles/styles.css
+++ b/src/resources/styles/styles.css
@@ -1,9 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap');
+
+
+*{
+    -fx-font-family: 'IBM Plex Mono', monospace !important;
+}
+
 .button{
     -fx-background-color:  #DEDEDE;
     -fx-text-fill:  #585858;
+    -fx-font-family: 'IBM Plex Mono', monospace !important;
+    -fx-border-color: rgba(88,88,88,0.5)!important;
+    -fx-border-width: 1px 1px 1px 1px!important;
+    -fx-border-radius: 2.5px!important;
 }
 
-.slider .track {
-    -fx-background-color: #eaeaea;
-    height: 5px;
+.label{
+    -fx-text-fill:  #585858;
+    -fx-font-family: 'IBM Plex Mono', monospace !important;
 }
+
+.slider .thumb{-fx-background-color: #9ea3b0!important;}
+
+#imagePane{
+    -fx-border-color: rgba(88,88,88,0.5)!important;
+    -fx-border-width: 1px 1px 1px 1px!important;
+    -fx-border-radius: 2.5px!important;
+}
+.menu .label{
+    -fx-text-fill:  #585858!important;
+    -fx-font-family: 'IBM Plex Mono', monospace !important;
+}
+.menu:hover{
+    -fx-background-color: #546a7b!important;
+}
+
+
+
+.menu-item .label{
+    -fx-text-fill:  #585858!important;
+    -fx-font-family: 'IBM Plex Mono', monospace !important;
+}
+.menu-item:hover{
+    -fx-background-color: #546a7b!important;
+}
+.menu-item:hover .label{
+    -fx-text-fill:  #DEDEDE!important;
+}
+.hyperlink{
+    -fx-text-fill: #546a7b!important;
+    -fx-label-padding: 0;
+    -fx-border-style: dashed;
+    -fx-border-color: #546a7b;
+    -fx-border-insets: 1;
+    -fx-border-width: 1;
+    -fx-border-radius: 2;
+}
+
